# github-repo-finder

./: .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
configs/: default_config.yaml
docs/: api_reference.md  architecture.md  developer_guide.md  troubleshooting.md
examples/: basic_search.py
prompts/: llm_formatting.txt
schemas/: repo_schema.json
src/github_repo_finder/: cli.py  mcp.py
src/github_repo_finder/core/: engine.py  models.py  ranking.py  search.py
src/github_repo_finder/utils/: caching.py  errors.py  token_opt.py
tests/: test_caching.py  test_ranking.py  test_token_opt.py
